# WF-gnome-shell

./: meson.build
metadata/: meson.build  overview.xml
src/: meson.build  overview.cpp
wayfire-gnome-shell/metadata/: meson.build
wayfire-gnome-shell/src/: meson.build
